--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": " nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
   },
+   "jest": {
+    "testEnvironment": "node"
+  },
   "author": "Majemite James",
   "license": "MIT",
   "devDependencies": {
@@ -17,6 +20,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
     "pubnub": "^4.33.0",
