--- a/package.json
+++ b/package.json
@@ -5,9 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "start": "node index.js",
-    "dev": " nodemon index.js",
-    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
+
+    "start": "npm run build-client && node index.js",
+
+    "dev": "run-p dev-client nodemon",
+
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
+
+    "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
+
+    "dev-client": "run-s clean parcel",
+
+    "clean": "if exist (rmdir /s/q .cache client/dist)",
+
+    "nodemon": "nodemon index.js",
+
+    "parcel": "parcel client/src/index.html --out-dir client/dist"
   },
   "jest": {
     "testEnvironment": "node"
@@ -17,13 +30,17 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^23.6.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
+    "parcel-bundler": "^1.12.5",
     "pubnub": "^4.33.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "request": "^2.88.2",
     "uuid": "^3.3.2"
   }
