--- a/package.json
+++ b/package.json
@@ -1,47 +1,45 @@
 {
-  "name": "cryptochain",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --watchAll",
-
-    "start": "npm run build-client && node index.js",
-
-    "dev": "run-p dev-client nodemon",
-
-    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
-
-    "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
-
-    "dev-client": "run-s clean parcel",
-
-    "clean": "if exist (rmdir /s/q .cache client/dist)",
-
-    "nodemon": "nodemon index.js",
-
-    "parcel": "parcel client/src/index.html --out-dir client/dist"
-  },
-  "jest": {
-    "testEnvironment": "node"
-  },
-  "author": "Majemite James",
-  "license": "MIT",
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "jest": "^23.6.0",
-    "nodemon": "^2.0.12",
-    "npm-run-all": "^4.1.5"
-  },
-  "dependencies": {
-    "elliptic": "^6.5.4",
-    "express": "^4.17.1",
-    "hex-to-binary": "^1.0.1",
-    "parcel-bundler": "^1.12.5",
-    "pubnub": "^4.33.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "request": "^2.88.2",
-    "uuid": "^3.3.2"
-  }
+    "name": "cryptochain",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest --watchAll",
+        "start": "node index.js",
+        "dev": "run-p dev-client nodemon",
+        "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
+        "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
+        "dev-client": "run-s clean parcel",
+        "clean": "if exist (rmdir /s/q .cache client/dist)",
+        "nodemon": "nodemon index.js",
+        "parcel": "parcel client/src/index.html --out-dir client/dist",
+        "server": "nodemon index.js",
+        "client": "npm start --prefix client",
+        "dev-new": "concurrently \"npm run server\" \"npm run client\""
+    },
+    "jest": {
+        "testEnvironment": "node"
+    },
+    "author": "Majemite James",
+    "license": "MIT",
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "concurrently": "^6.2.1",
+        "cross-env": "^7.0.3",
+        "jest": "^23.6.0",
+        "nodemon": "^2.0.12",
+        "npm-run-all": "^4.1.5"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "elliptic": "^6.5.4",
+        "express": "^4.17.1",
+        "hex-to-binary": "^1.0.1",
+        "parcel-bundler": "^1.12.5",
+        "pubnub": "^4.33.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "request": "^2.88.2",
+        "uuid": "^3.3.2"
+    }
 }
