--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "parcel": "parcel client/src/index.html --out-dir client/dist",
         "server": "nodemon index.js",
         "client": "npm start --prefix client",
-        "dev-new": "concurrently \"npm run server\" \"npm run client\""
+        "dev-new": "concurrently \"npm run server\" \"npm run client\"",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "jest": {
         "testEnvironment": "node"
